--- a/Instalador Majimomos/Properties/Resources.resx
+++ b/Instalador Majimomos/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="yakuza_kiwami_2___icon_by_blagoicons_dd87ow6-fullview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\yakuza_kiwami_2___icon_by_blagoicons_dd87ow6-fullview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="steam" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\steam.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gamepass" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gamepass.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
